# vita

./: .gitignore  pyproject.toml  risk_analysis.yaml
chart/: values.yaml
chart/charts/streaming-processors/templates/: deployment.yaml
chart/charts/websockets-server/: values.yaml
docker-compose/: docker-compose.dev.yaml
infra/: README.md  quota.yml  redpanda-cluster.yaml  redpanda-values.yaml
simulator/: kafka_client.py  simulator.py
vita/api/: router.py
vita/clients/: kafka_client.py  websocket_client.py
vita/consumers/: glucose_consumer.py  vita_consumer.py
vita/simulator/: blood_glucose_producer.py  simulator.py
vita/stream_processing/: glucose_processor.py
vita/streaming/: glucose_consumer.py  glucose_processor.py  quix.py
vita/streaming/reducers/: glucose_reducer.py
vita/utils/: base_kafka_producer.py  config.py
vita/websocket_server/: server.py
vita/websockets/: server.py
