[tool.poetry]
name = "vita"
packages = [{include = "vita"}]
version = "0.1.0"
description = ""
authors = ["Yesid Lopez <<yesid.leonardo.lopez@hotmail.com>>"]

[tool.poetry.dependencies]
python = "^3.10"
langchain-openai = "^0.1.20"
fastapi = {extras = ["standard"], version = "^0.112.0"}
python-dotenv = "^1.0.1"
simglucose = "^0.2.11"
kafka-python = "^2.0.2"
quixstreams = "^3.1.0"


[tool.poetry.group.websocket-server.dependencies]
websocket = "^0.2.1"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
